2006-01-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: change to PLATFORM-ARCH download links.

2006-01-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/install/index.html: update fedora installation tips

2006-01-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: add freebsd, upgrade to 2.7.27-3
	gmane links for bugs.
	opss. move freebsd.

2006-01-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce new binaries.

	* site/install/devel.ihtml: announce 2.7.27-2 for macos & windows.
	remove autopackage, install SH-archive.

2006-01-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: 2.7.26-3, 2.7.26-4 for windows.

2006-01-04  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: 2.7.26-2 for mac. 

	* site/news.ihtml (Preferably): announce Schenker article again.

2006-01-03  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: New lilypond mingw gub binary.

2005-12-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/install/devel.ihtml: Fix autopackage link.

2006-01-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/index.html: install rpm-build too in FC instructions.

	* site/install/devel.ihtml: MacOS is now  a .zip file.

2005-12-31  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/devel.ihtml: update links for GUB binaries.

2005-12-31  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/switch/advantages: typo

2005-12-20  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/install/stable.ihtml: remove ghostscript RPMs.
	remove windows logo from cygwin.

2005-12-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* {site,fr,nl}/install/cygwin.html: move from windows.html

2005-12-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* site/news.ihtml:
	* site/about/pubs.html: Mention linuxjournal.com article.
	Add cover picture.  Found stronger quote.

2005-12-14  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>

	* fr/about/index.html: update Links
