@@ -53,12 +53,12 @@
     <td>
       <strong>
 	Download _("<a href='%s'>the installer</a>",
-	"http://lilypond.org/download/binaries/linux-x86/lilypond-2.7.27-3.linux.sh");
+	"http://lilypond.org/download/binaries/linux-x86/lilypond-2.7.27-4.linux.sh");
 	<br>
 	</strong>
 	<em>run this file from the command prompt.</em>
     </td>
-    <td>2.7.27-3</td>
+    <td>2.7.27-4</td>
     <td><a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.bugs">_("LilyPond development team")</a></td>
   </tr>
 
@@ -86,12 +86,12 @@
     <td>
       <strong>
 	Download _("<a href='%s'>the installer</a>",
-	"http://lilypond.org/download/binaries/freebsd-x86/lilypond-2.7.27-3.freebsd.sh");
+	"http://lilypond.org/download/binaries/freebsd-x86/lilypond-2.7.27-4.freebsd.sh");
 	<br>
 	</strong>
 	<em>run this file from the command prompt.</em>
     </td>
-    <td>2.7.27-3</td>
+    <td>2.7.27-4</td>
     <td><a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.bugs">_("LilyPond development team")</a></td>
   </tr>
 
@@ -106,11 +106,11 @@
     <td>
       <strong>
 	_("Download <a href='%s'>%s</a>",
-	  "http://lilypond.org/download/binaries/darwin-ppc/lilypond-2.7.27-3.darwin.zip",
+	  "http://lilypond.org/download/binaries/darwin-ppc/lilypond-2.7.27-4.darwin.zip",
  	  "LilyPond")
       </strong>
     </td>
-    <td>2.7.27-3</td>  
+    <td>2.7.27-4</td>  
     <td>
       <a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.bugs">_("LilyPond development team")</a>
     </td> 
@@ -125,10 +125,10 @@
     <td>
       <strong>
 	_("<a href='%s'>Install</a>",
- 	  "http://lilypond.org/download/binaries/mingw/lilypond-2.7.27-3.mingw.exe")
+ 	  "http://lilypond.org/download/binaries/mingw/lilypond-2.7.27-4.mingw.exe")
       </strong>
     </td>
-    <td>2.7.27-3</td>
+    <td>2.7.27-4</td>
     <td><a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.bugs">_("LilyPond development team")</a></td>
     </td>
   </tr>
