@@ -23,6 +23,29 @@
 
         
 
+<dt><b>Linux Journal article</b> - <em>January 2006</em></dt>
+<dd>
+  <a href="@IMAGES@lj-cover140.png">
+  <img src="@IMAGES@lj-cover140-small.png" align="right" alt="linux
+  journal cover"></a>
+
+  
+    Linux Journal publishes an article on
+      <a href="http://www.linuxjournal.com/article/8583"><em>Make
+    Stunning Schenker Graphs with GNU LilyPond</em></a>.  It is a
+    in-depth but hands-on feature article with crisp LilyPond
+    graphics.
+
+    <br>Author Kris Shaffer remarks
+    &ldquo;GNU Lilypond generates beautiful graphics that make commercial
+    alternatives seem second-rate.&rdquo;
+
+    <p>
+    This article is now available <a
+    href="http://www.linuxjournal.com/article/8583">on-line</a>.
+    
+    
+</dd>
 
 
 <dt><b>New binaries for LilyPond 2.7.26</b> - <em>January 4,
