@@ -1,5 +1,9 @@
 2006-01-13  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* site/news.ihtml (Preferably): announce -4
+
+	* site/install/devel.ihtml: announce -4.
+
 	* site/install/stable.ihtml: change to PLATFORM-ARCH download links.
 
 2006-01-12  Gauvain Pocentek  <gauvainpocentek@yahoo.fr>
